--- a/Home.html
+++ b/Home.html
@@ -115,7 +115,7 @@
             position: fixed; width: 400px; height: 400px; background: radial-gradient(circle, rgba(14, 165, 233, 0.15) 0%, transparent 70%);
             border-radius: 50%; pointer-events: none; z-index: -1; transform: translate(-50%, -50%);
         }
-
+        footer { padding: 40px; text-align: center; background: var(--glass); margin-top: 50px; border-top: 1px solid var(--border); }
         @media (max-width: 768px) { .stats-bar { flex-direction: column; border-radius: 20px; } }
     </style>
 </head>
@@ -160,7 +160,12 @@
         <div class="stat-item"><b class="counter" data-target="15000">0</b><span id="stat-text-3">Winning Tips</span></div>
     </div>
 </section>
-
+<footer>
+    <a href="https://www.facebook.com/profile.php?id=61588443053104" target="_blank">
+        <img src="facebook-1.png" width="30" style="margin-bottom: 10px;">
+    </a>
+    <p style="font-size: 10px; opacity: 0.5; font-family: 'Orbitron';">© 2026 LUCKYPITCH | SMART BETTING SYSTEM</p>
+</footer>
 <script>
 // --- STRIPE INITIALIZATION ---
 const stripe = Stripe('pk_test_51T2qaQQkKVs47hkTqXwOVadi0o1GiBortnh6rNLqLxHMS7E6CKCQwp4lcwtnk7jIojzDjERp8wuMHNgx5FKqHEUo00uXcI3IS5');
@@ -219,3 +224,4 @@ window.addEventListener('load', startApp);
 </script>
 </body>
 </html>
+
