--- a/meccsek.html
+++ b/meccsek.html
@@ -359,6 +359,29 @@ async function updateData() {
     }
 }
 
+function checkGoals() {
+    // Ha nincs allMatches vagy nem lista, ne csináljon semmit
+    if (!allMatches || !Array.isArray(allMatches)) return;
+
+    allMatches.forEach(match => {
+        const matchId = match.id;
+        // Biztonságos pontszám lekérés
+        const currentScore = (match.score && match.score.fullTime) ? 
+            `${match.score.fullTime.home}-${match.score.fullTime.away}` : "0-0";
+
+        // Ha már ismertük ezt a meccset és változott a pontszám
+        if (prevScores.has(matchId) && prevScores.get(matchId) !== currentScore) {
+            const [oldH, oldA] = prevScores.get(matchId).split('-').map(Number);
+            const [newH, newA] = currentScore.split('-').map(Number);
+
+            // Megnézzük ki lőtte a gólt és villantunk
+            if (newH > oldH) triggerGoalEffect(matchId, match.homeTeam.name, match.homeTeam.crest);
+            if (newA > oldA) triggerGoalEffect(matchId, match.awayTeam.name, match.awayTeam.crest);
+        }
+        // Frissítjük a tárolt eredményt
+        prevScores.set(matchId, currentScore);
+    });
+}
 
 function getSmartOdds(match) {
     // Ha van adat az API-ból, megpróbáljuk párosítani
@@ -640,6 +663,7 @@ window.addEventListener('load', startApp);
     </script>
 </body>
 </html>
+
 
 
 
