--- a/meccsek.html
+++ b/meccsek.html
@@ -162,23 +162,19 @@
     position: relative;
     box-shadow: 0 0 50px rgba(255, 62, 62, 0.8);
 }
-        .odds-btn {
-    background: rgba(255, 255, 255, 0.03);
-    border: 1px solid rgba(0, 243, 255, 0.2);
-    border-radius: 6px;
-    padding: 6px 2px;
+      .odds-btn {
+    background: rgba(255, 255, 255, 0.05);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 4px;
     color: white;
-    cursor: pointer;
     transition: all 0.2s;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    cursor: pointer;
 }
 
 .odds-btn:hover {
-    background: var(--neon-blue);
-    color: black;
-    box-shadow: 0 0 10px var(--neon-blue);
+    background: rgba(0, 68, 255, 0.4);
+    border-color: #0044ff;
+    transform: translateY(-1px);
 }
 
 .odds-label { font-size: 9px; opacity: 0.6; margin-bottom: 2px; }
@@ -715,6 +711,7 @@ window.addEventListener('load', startApp);
     </script>
 </body>
 </html>
+
 
 
 
